Fix overflow problem in Firefox

--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -33,6 +33,7 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 
   @media (max-width: 576px) {
     padding: 10px;
